src/test/egern/success/variable_in_function_with_function_name.egern
func abc(a, b, c) {
    var abc = 2;
    return a + b + c - abc;
}

print(abc(1, 2, 3));
