src/test/egern/fail/using_undeclared_parameter_fail.egern
func test(a: int, b: int): int {
    return a + b + c;
}
print(test(3, 4));
